<resources>
    <string name="app_name">VidyarthiKU</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VidyarthiKU</string>
    <string name="nav_header_subtitle"> Love To Learn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="bottom_nav_first">Videos</string>
    <string name="bottom_nav_second">Resources</string>
    <string name="bottom_nav_third">Quiz</string>

    <string name="title_activity_learn">Learn</string>

    <string name="drawer_first">Home</string>
    <string name="drawer_second">Downloads</string>
    <string name="drawer_third">Saved Videos</string>
    <string name="drawer_about_us">About Us</string>
    <string name="drawer_go_to_youtube">Placement Cell</string>
    <string name="drawer_share_now">Share Now</string>
    <string name="drawer_developers">Developers</string>
    <string name="drawer_team">Our Faculties</string>

    <string name="media_and_promotion">Media And Promotion</string>
    <string name="chief_educator">Chief Educator</string>
    <string name="co_founder">Co-Founder</string>
    <string name="dev_arjun_s_g">Arjun S.G</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_documents_message">Documents coming soon...</string>
    <string name="empty_videos_message">Videos coming soon…</string>
    <string name="dev_abhishek_s_lal">ABHISHEK S LAL</string>
    <string name="terms_of_use">By Signing In You Are Agreeing To EDUzap\'s Terms of Use and Privacy Policy</string>
    <string name="empty_downloads_message">Oops...You have no downloads right now.</string>
    <string name="method_of_teaching">Keeping teaching methods fresh is integral to getting students engaged in their studies and educational videos are a fantastic way of achieving this. These are designed with primary input from educators and curriculum developers, or shown in educational research to be an effective learning tool.</string>
    <string name="about_description">EDUzap, an educational platform providing video lectures through Youtube channels, social media for open discussions, space for expressing creativity through channel Blog. Offering effective learning programs for competitive aspirants and engineering students. Teaching methods implemented prior to primary input from educational professionals and curriculum developers.</string>

</resources>
