<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_first" />
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_download"
            android:title="@string/drawer_second" />
        <!--        <item-->
        <!--            android:id="@+id/nav_saved_videos"-->
        <!--            android:icon="@drawable/ic_save_black_24dp"-->
        <!--            android:title="@string/drawer_third" />-->
    </group>

    <group android:checkableBehavior="single">
        <item android:title="More">
            <menu>
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_baseline_info"
                    android:title="@string/drawer_about_us" />
                <item
                    android:id="@+id/nav_goto_youtube"
                    android:icon="@drawable/ic_youtube"
                    android:title="@string/drawer_go_to_youtube" />
                <item
                    android:id="@+id/nav_contact_us"
                    android:icon="@drawable/ic_baseline_people_24"
                    android:title="@string/drawer_team" />

                <item
                    android:id="@+id/nav_developers"
                    android:icon="@drawable/ic_programmer"
                    android:title="@string/drawer_developers" />

                <item
                    android:id="@+id/nav_share_now"
                    android:icon="@drawable/ic_share"
                    android:title="@string/drawer_share_now" />

            </menu>
        </item>
    </group>
</menu>
