<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_videos">

    <fragment
        android:id="@+id/navigation_videos"
        android:name="com.eduzap.android.ui.bottom_navigation.videos.VideosFragment"
        android:label="@string/bottom_nav_first"
        tools:layout="@layout/bottom_nav_fragment_videos" />

    <fragment
        android:id="@+id/navigation_documents"
        android:name="com.eduzap.android.ui.bottom_navigation.documents.DocumentsFragment"
        android:label="@string/bottom_nav_second"
        tools:layout="@layout/bottom_nav_fragment_documents" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.eduzap.android.ui.bottom_navigation.quiz.QuizFragment"
        android:label="@string/bottom_nav_third"
        tools:layout="@layout/bottom_nav_fragment_quiz" />
</navigation>
